--- a/ETL_Mini_Project_BLy.ipynb
+++ b/ETL_Mini_Project_BLy.ipynb
@@ -9,7 +9,8 @@
     "# Import dependencies\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "pd.set_option('max_colwidth', 400)"
+    "pd.set_option('max_colwidth', 400)\n",
+    "\n"
    ]
   },
   {
@@ -233,7 +234,8 @@
     }
    ],
    "source": [
-    "# Get a brief summary of the crowdfunding_info DataFrame.\n"
+    "# Get a brief summary of the crowdfunding_info DataFrame.\n",
+    "crowdfunding_info_df.info()"
    ]
   },
   {
@@ -275,7 +277,8 @@
     }
    ],
    "source": [
-    "# Get the crowdfunding_info_df columns.\n"
+    "# Get the crowdfunding_info_df columns.\n",
+    "crowdfunding_info_df.columns"
    ]
   },
   {
@@ -464,7 +467,9 @@
     }
    ],
    "source": [
-    "# Assign the category and subcategory values to category and subcategory columns.\n"
+    "# Assign the category and subcategory values to category and subcategory columns.\n",
+    "crowdfunding_info_df[['category','subcategory']] = crowdfunding_info_df['category & sub-category'].str.split('/', expand = True)\n",
+    "crowdfunding_info_df.head()"
    ]
   },
   {
@@ -488,8 +493,10 @@
    ],
    "source": [
     "# Get the unique categories and subcategories in separate lists.\n",
+    "categories = crowdfunding_info_df['category'].unique()\n",
+    "subcategories = crowdfunding_info_df['subcategory'].unique()\n",
     "\n",
-    "\n",
+    "# printing both columns\n",
     "print(categories)\n",
     "print(subcategories)"
    ]
@@ -539,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -553,9 +560,10 @@
    ],
    "source": [
     "# Use a list comprehension to add \"cat\" to each category_id. \n",
+    "cat_ids = ['cat'+str(large) for large in category_ids]\n",
     "\n",
     "# Use a list comprehension to add \"subcat\" to each subcategory_id.    \n",
-    "\n",
+    "scat_ids = ['subcat'+str(small) for small in subcategory_ids]\n",
     "    \n",
     "print(cat_ids)\n",
     "print(scat_ids)"
@@ -563,18 +571,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a category DataFrame with the category_id array as the category_id and categories list as the category name.\n",
+    "category_df = pd.DataFrame({'category_id':cat_ids, 'category':categories})\n",
     "\n",
-    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n"
+    "# Create a category DataFrame with the subcategory_id array as the subcategory_id and subcategories list as the subcategory name. \n",
+    "subcategory_df = pd.DataFrame({'subcategory_id':scat_ids, 'subcategory':subcategories})"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -665,7 +675,7 @@
        "8        cat9    journalism"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -676,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -857,7 +867,7 @@
        "23       subcat24              audio"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3700,7 +3710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.4"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
